--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,12 +58,11 @@ body {
 }
 
 .p__opensans {
-  font-family: 'Bebas Neue', cursive;
   font-weight: 400;
   letter-spacing: 0.04em;
-  text-transform: lowercase;
+  text-transform: uppercase;
   line-height: 28px;
-  font-size: 20px;
+  font-size: 13px;
 }
 
 
@@ -162,7 +161,7 @@ a {
 
 .app__navbar-links {
     flex: 1;
-   
+   text-transform: uppercase;
     display: flex;
     justify-content: right;
     list-style: none;
@@ -279,13 +278,11 @@ a {
 
 }
 
-.box {
-  position: relative;
-}
 
 .search {
-  width: 100%;
+  width: 80%;
   position: relative;
+  margin: auto;
   display: flex;
 }
 
@@ -294,12 +291,14 @@ a {
   position: relative;
   margin-top: 5%;
   margin-bottom: 10%;
+ 
 }
 
 .input {
   padding: 10px;
   width: 50%;
   height: 10px;
+  margin-left: 50px;
   background: none;
   border: 1px solid #333;
   border-radius: 50px;
@@ -318,10 +317,10 @@ a {
 
 .box i {
   position: absolute;
-  top: 50%;
+  top: 0%;
   right: 15px;
-  transform: translate(-50%, -50%);
-  font-size: 12px;
+  transform: translate(-20%, -20%);
+  font-size: 15px;
   color: white;
   transition: .2s;
 }
