--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ html {
   behavior: smooth;
   font-family: 'Roboto', sans-serif;
   margin:0;
-  padding: 0;
+  padding: 0px;
 }
 
 body {
@@ -286,17 +286,16 @@ a {
 
 
 .search {
-  width: 80%;
+  width: 20%;
   position: relative;
-  margin: auto;
   display: flex;
+  padding: 3px;
+  margin-bottom: 5px;
 }
 
 
 .box {
   position: relative;
-  margin-top: 5%;
-  margin-bottom: 10%;
 
 }
 
@@ -306,7 +305,7 @@ a {
   height: 10px;
   margin-left: 50px;
   background: none;
-  border: 1px solid #333;
+  border: 1px solid #238636;
   border-radius: 50px;
   box-sizing: border-box;
   font-size: 16px;
@@ -315,9 +314,9 @@ a {
   transition: .5s;
 }
 
-.box:hover input {
+.box input:hover {
   width: 80%;
-  background: #3b3640;
+  background: #0d1117;
   border-radius: 10px;
 }
 
@@ -447,7 +446,6 @@ hr {
 .midcolumn {
   display: inline-block;
   margin: 0 auto  ;
-  padding: 100px !important;
   text-align: left;
   border-left: 1px solid #333;
   padding: 5%;
@@ -533,10 +531,9 @@ hr {
 }
 
 .initial-post {
-  box-shadow: 1px 1px 18px -9px #000000;
-  width: 90%;
   border: 1px solid #333;
-  padding: 5%;
+  width: 90%;
+  padding: 2%;
   margin: auto;
   margin-top: 20px;
 
