--- a/styles/globals.css
+++ b/styles/globals.css
@@ -189,8 +189,9 @@ a {
 
 .app__navbar-links li:hover,
 .app__navbar-logo:hover {
-  border-bottom: 1px solid goldenrod;
+  
   color: rgb(224, 223, 223);
+  opacity: 0.7;
   transition: 0.5s ease-in-out;
 }
 
@@ -472,6 +473,7 @@ hr {
   display: inline-block;
   margin: 0 auto;
   text-align: left;
+  min-height: 100vh;
   border-left: 1px solid #333;
   padding: 5%;
   background-color: black;
@@ -485,7 +487,13 @@ hr {
   top: 0px;
   width: 15%;
 }
-
+.me_on_github p{
+  font-size: 13px;
+}
+.me_on_github span{
+  margin-left: 0.5%;
+  color: green;
+}
 .rightcolumn ol {
   list-style-type: none;
 }
@@ -971,17 +979,27 @@ div.social {
   width: 8rem;
   height: 8rem;
 }
-
+.Contact{
+  line-height: 30px;
+}
+#position{
+  color: red;
+  border-bottom: 1px solid olivedrab;
+  width: 20%;
+  margin-bottom: 2%;
+}
 .Summary {
   margin-top: 20%;
 }
-
+.name h3 , h1{
+  text-transform: uppercase !important;
+}
 
 .skills-section {
   border-radius: 15px;
   padding: 2%;
   margin: auto;
-  margin-top: 2%;
+  margin-top: 0;
   font-size: 15px;
   color: rgb(217, 216, 216);
 
@@ -994,7 +1012,7 @@ div.social {
 }
 
 
-/*skill*/
+/*skills*/
 .container {
   margin-bottom: 5%;
   border-radius: 15px;
