--- a/styles/globals.css
+++ b/styles/globals.css
@@ -188,14 +188,14 @@ a {
 .app__navbar-links li {
   margin: 0 1rem;
   cursor: pointer;
+  padding: 5px;
 }
 
-.app__navbar-links li:hover,
-.app__navbar-logo:hover {
+.app__navbar-links li:hover {
 
-  color: rgb(224, 223, 223);
-  opacity: 0.7;
-  transition: 0.5s ease-in-out;
+  background-color: rgba(255,255,255,0.3);
+  color:white;
+  border-radius: 10px;
 }
 
 
@@ -1465,4 +1465,28 @@ ol {
     width: 100%;
 
   }
+}
+
+
+
+.contactFormContainer input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: none;
+  outline: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: none;
+
+}
+
+
+
+.contactFormContainer {
+  border-radius: 5px;
+  background-color: rgb(41, 41, 41);
+  padding: 20px;
 }
