--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1503,22 +1503,48 @@ textarea {
   width: 220px;
   overflow: hidden;
   position: relative;
-}
-
-.marquee  {
   margin-top: 10%;
   display: block;
   width: 100%;
   height: 30px;
-  animation: marquee 1s linear ;
-}
-.marquee:hover {
-  animation-play-state: paused !important;
+
 }
 
 
-@keyframes marquee {
-  from { transform: translateX(0); }
-  to { transform: translateX(-10%); }
+
+
+.slide {
+  -webkit-animation: slideIn 2s forwards;
+  -moz-animation: slideIn 2s forwards;
+  animation: slideIn 2s forwards;
 }
 
+@-webkit-keyframes slideIn {
+  0% {
+    transform: translateX(-900px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@-moz-keyframes slideIn {
+  0% {
+    transform: translateX(-900px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(-900px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
