--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1501,6 +1501,7 @@ textarea {
 .marquee {
   height: 100% !important;
   width: 220px;
+  margin-bottom: 5% ;
   overflow: hidden;
   position: relative;
   margin-top: 10%;
@@ -1547,4 +1548,8 @@ textarea {
   100% {
     transform: translateX(0);
   }
+}
+
+[list]::-webkit-calendar-picker-indicator {
+  display: none !important;
 }
