--- a/styles/globals.css
+++ b/styles/globals.css
@@ -999,7 +999,6 @@ div.social {
 }
 
 #position {
-  color: red;
   border-bottom: 1px solid olivedrab;
   width: 20%;
   margin-bottom: 2%;
@@ -1501,7 +1500,7 @@ textarea {
 .marquee {
   height: 100% !important;
   width: 220px;
-  margin-bottom: 5% ;
+  margin-bottom: 5%;
   overflow: hidden;
   position: relative;
   margin-top: 10%;
@@ -1552,4 +1551,48 @@ textarea {
 
 [list]::-webkit-calendar-picker-indicator {
   display: none !important;
+}
+
+datalist {
+  position: absolute;
+  background-color: white;
+  border: 1px solid blue;
+  border-radius: 0 0 5px 5px;
+  border-top: none;
+  font-family: sans-serif;
+  width: 350px;
+  padding: 5px;
+  max-height: 10rem;
+  overflow-y: auto
+}
+
+.option {
+  background-color: white;
+  padding: 4px;
+  color: blue;
+  margin-bottom: 1px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+
+.a {
+  padding: 30px !important;
+  max-height: 0;
+  
+  transition: max-height 1s ease-out;
+ 
+  overflow: hidden;
+  background: #d5d5d5;
+}
+
+.a:hover {
+  max-height: 100px;
+  transition: max-height 1s ease-in;
+
+}
+
+.r {
+  display: inline-block;
+  margin-top: 2%;
 }
