--- a/styles/globals.css
+++ b/styles/globals.css
@@ -210,7 +210,7 @@ a {
   top: 0;
   left: 0;
   height: 100vh;
-  background-color: transparent;
+  background-color: rgb(22, 27, 34);
   backdrop-filter: blur(18px);
   flex-direction: row;
   z-index: 5;
