--- a/styles/blog.css
+++ b/styles/blog.css
@@ -379,8 +379,7 @@
     transition: .5s ease;
     opacity: 0.7;
   }
-  
-  .btn {
+  .btn{
     height: 30px;
     width: 120px;
     font-size: 15px;
@@ -391,6 +390,39 @@
     color: white;
   }
   
+  .hiddenBtn {
+    height: 30px;
+    width: 10px;
+    font-size: 15px;
+    border-radius: 12px;
+    margin-top: 2%;
+    border-color: transparent;
+    background-color: #333;
+    color: white;
+    will-change: transform;
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+
+  }
+
+  .sentBtn {
+    height: 30px;
+    width: 120px;
+    font-size: 15px;
+    border-radius: 12px;
+    margin-top: 2%;
+    border-color: transparent;
+    background-color: #333;
+    color: white;
+    cursor: pointer;
+    will-change: transform;
+    -webkit-transition: all .5s ease-in-out;
+    transition: all .2s ease-in-out;
+
+  }
+  .sentBtn:hover{
+    background-color: rgb(176, 0, 0);
+  }
   .btn:hover {
     cursor: pointer;
     transition: .2s ease-in;
