--- a/styles/blog.css
+++ b/styles/blog.css
@@ -177,10 +177,18 @@
   }
   
   .leftcolumn {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height:100vh!important;
+    background-color: #0d1117;
+    display: flex;
+    flex-direction: column;
     float: left;
     padding: 1rem;
     position: sticky;
-    top: 80px;
+    top: 0px;
+    padding-top: 10%;
     width: 15%;
   }
   
